--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: nodejsapp           # set this to your Amazon ECR repository name
   ECS_SERVICE: sample_project1                 # set this to your Amazon ECS service name
   ECS_CLUSTER: nodejs_demo               # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: 962308753838.dkr.ecr.ap-southeast-2.amazonaws.com/nodejsapp # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: arn:aws:ecs:ap-southeast-2:962308753838:task-definition/sample_project:1 # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: worker           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
