--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: nodejsapp           # set this to your Amazon ECR repository name
   ECS_SERVICE: sample_project1                 # set this to your Amazon ECS service name
   ECS_CLUSTER: nodejs_demo               # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: arn:aws:ecs:ap-southeast-2:962308753838:task-definition/sample_project:1 # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: sample_project # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: worker           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
@@ -76,6 +76,10 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+        
+    - name: Download task definition
+      run: |
+        aws ecs describe-task-definition --task-definition service \ --query taskDefinition > task-definition.json
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
